# Dryade

./: .dockerignore  .env.example  .env.quickstart.example  .geminiignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  ACTION-PLAN.md  AGENTS.md  CHANGELOG.md  CLA.md  CONTRIBUTING.md  Dockerfile  FEATURES.md  FULL-AUDIT-REPORT.md  LICENSE  LICENSE_EE.md  Makefile  README.md  SECURITY.md  SELF_HOSTING.md  ai.txt  cliff.toml  docker-compose.yml  mkdocs.yml  moltbook-claim-snapshot.yaml  pyproject.toml  start_backend_manual.sh  start_production.sh
dryade-core/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
dryade-core/agents/: .gitignore  __init__.py
dryade-core/agents/code_review_assistant/: __init__.py  config.yaml  dryade.json
dryade-core/agents/code_reviewer/: __init__.py  config.yaml  dryade.json
dryade-core/agents/create_a_customer_support/: __init__.py  config.yaml  dryade.json
dryade-core/agents/data-processor/: __init__.py  config.yaml  dryade.json
dryade-core/agents/data_pipeline_monitor/: __init__.py  config.yaml  dryade.json
dryade-core/agents/database_analyst/: __init__.py  config.yaml  dryade.json
dryade-core/agents/devops_engineer/: __init__.py  config.yaml  dryade.json
dryade-core/agents/infrastructure_health_checker/: __init__.py  config.yaml  dryade.json
dryade-core/agents/meeting_summarizer/: __init__.py  config.yaml  dryade.json
dryade-core/agents/project_manager/: __init__.py  config.yaml  dryade.json
dryade-core/agents/research_assistant/: __init__.py  config.yaml  dryade.json
dryade-core/agents/security_incident_responder/: __init__.py  config.yaml  dryade.json
dryade-core/core/: __init__.py  alembic.ini  config.py  dryadepkg_format.py  encrypted_bridge.py  encrypted_loader.py  exceptions.py  health_checks.py  internal_api.py  logs.py  mcp_plugin_bridge.py  retention.py
dryade-core/core/a2a/: __init__.py  executor.py  models.py  task_store.py
dryade-core/core/adapters/: __init__.py  a2a_adapter.py  adk_adapter.py  auto_discovery.py  crewai_adapter.py  crewai_delegation.py  langchain_adapter.py  langgraph_delegation.py  protocol.py  registry.py  skill_adapter.py  skill_bridge.py  zero_dev.py
dryade-core/core/agents/: __init__.py  llm.py  rag_agent.py
dryade-core/core/alembic/: env.py
dryade-core/core/api/: __init__.py  main.py
dryade-core/core/audit/: __init__.py  tracer.py
dryade-core/core/auth/: __init__.py  audit.py  dependencies.py  events.py  mfa.py  ownership.py  password.py  service.py  sharing.py
dryade-core/core/autonomous/: __init__.py  audit.py  chat_adapter.py  executor.py  leash.py  models.py  planner.py  router.py  scheduler.py  skill_creator.py
dryade-core/core/clarification/: __init__.py  protocol.py
dryade-core/core/clarify/: __init__.py
dryade-core/core/cli/: __init__.py  build_plugins.py  create_plugin.py  main.py  validate_plugin.py
dryade-core/core/commands/: __init__.py  protocol.py  registry.py
dryade-core/core/cost_tracker/: __init__.py  pricing.py  tracker.py
dryade-core/core/crew/: __init__.py  event_bridge.py  event_helpers.py  graceful_degradation.py
dryade-core/core/crypto/: __init__.py
dryade-core/core/database/: __init__.py  ai_decision_log.py  migrate.py  models.py  rls.py  session.py
dryade-core/core/domains/: __init__.py  base.py
dryade-core/core/ee/: __init__.py  allowlist.ee.py  allowlist_watchdog.ee.py  dryadepkg_format.ee.py  encrypted_bridge.ee.py  encrypted_loader.ee.py  fingerprint.ee.py  heartbeat.ee.py  integrity.ee.py  internal_api.ee.py  plugin_config_store.ee.py  plugin_loader.ee.py  plugin_security.ee.py  plugins_ee.py
dryade-core/core/extensions/: __init__.py  context.py  decorator.py  events.py  latency_tracker.py  pipeline.py  request_queue.py  state.py
dryade-core/core/factory/: __init__.py  _llm.py  config_generator.py  models.py  orchestrator.py  registry.py  relevance.py  scaffold.py  tester.py
dryade-core/core/flows/: __init__.py  editor.py  reactflow_converter.py
dryade-core/core/knowledge/: __init__.py  chroma_store.py  chunker.py  config.py  context.py  embedder.py  parsers.py  pgvector_store.py  pipeline.py  sources.py  storage.py  summary_index.py  vector_store.py
dryade-core/core/loops/: __init__.py  models.py  service.py
dryade-core/core/mcp/: __init__.py  adapter.py  autoload.py  bridge.py  capability_cache.py  config.py  credentials.py  domain.py  embeddings.py  hierarchical_router.py  http_transport.py  nl_query.py  protocol.py  registry.py  self_mod.py  setup_wizard.py  stdio_transport.py  tool_index.py  tool_wrapper.py
dryade-core/core/observability/: __init__.py  crewai_tracing.py  logging.py  metrics.py  otel.py  tracing.py
dryade-core/core/orchestrator/: __init__.py  action_autonomy.py  cancellation.py  capability_registry.py  checkpoint.py  circuit_breaker.py  clarification.py  complexity.py  config.py  context.py  continuous_loop.py  escalation.py  explainability.py  failure_classifier.py  failure_handler.py  failure_history.py  failure_metrics.py  failure_middleware.py  few_shot_library.py  flow_debugger.py  memory_tools.py  middleware.py  model_detection.py  models.py  observation.py  optimization_pipeline.py  orchestrator.py  output_judge.py  planner.py  planning.py  prevention.py  prompt_manager.py  react_loop.py  reflection.py  replayer.py  retry_executor.py  router.py  routing_metrics.py  routing_strategy.py  self_mod_tools.py  (+5 more)
dryade-core/core/providers/: __init__.py  capabilities.py  cost_context.py  inference_params.py  langchain_adapter.py  llm_adapter.py  llm_context.py  registry.py  user_config.py  vllm_llm.py
dryade-core/core/safety/: __init__.py  validator.py
dryade-core/core/self_dev/: __init__.py  sandbox.py  signer.py  staging.py
dryade-core/core/services/: __init__.py  conversation.py  conversation_branching.py  message_hygiene.py
dryade-core/core/skills/: __init__.py  adapter.py  executor.py  loader.py  mcp_bridge.py  models.py  registry.py  tool.py  watcher.py
dryade-core/tests/: __init__.py  conftest.py  test_mcp_plugin_bridge.py  test_plugin_config_store.py
(+1274 files in other folders)
